refactor: switch to standalone neovim lua test action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,18 +56,7 @@ jobs:
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
         env:
           NEOVIM_PATH: ${{ steps.vim.outputs.executable }}
-      - uses: leafo/gh-actions-lua@v9
-        with:
-          luaVersion: "luajit-2.1.0-beta3"
-        if: runner.os == 'Linux' && matrix.app_version == 'stable'
-      - uses: leafo/gh-actions-luarocks@v4
-        with:
-          luaVersion: "5.1"
-        if: runner.os == 'Linux' && matrix.app_version == 'stable'
-      - run: luarocks install busted luafilesystem
-        if: runner.os == 'Linux' && matrix.app_version == 'stable'
-      - name: Run cursorless.nvim busted lua tests
-        run: cd cursorless.nvim && busted --run unit
+      - uses: ./.github/actions/test-neovim-lua/
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
       - name: Create vscode dist that can be installed locally
         run: pnpm -F @cursorless/cursorless-vscode populate-dist --local-install
