--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,10 +43,10 @@ jobs:
         if: runner.os == 'Linux'
       - run: pnpm --color test
         if: runner.os != 'Linux'
-      - name: Run Cursorless everywhere talon e2e tests
+      - name: Cursorless everywhere talon e2e tests
         run: xvfb-run -a pnpm -F @cursorless/test-harness test:talonJs
         if: runner.os == 'Linux' && matrix.vscode_version == 'stable'
-      - name: Run Cursorless everywhere talon quickjs tests
+      - name: Cursorless everywhere talon quickjs tests
         run: xvfb-run -a pnpm -F @cursorless/cursorless-everywhere-talon-e2e test:quickjs
         if: runner.os == 'Linux' && matrix.vscode_version == 'stable'
       - name: Create vscode dist that can be installed locally
