Add @phillco as codeowner

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-*       @pokey @AndreasArvidsson
+*       @pokey @AndreasArvidsson @phillco
 
-*keyboard* @pokey @AndreasArvidsson @josharian
-*Keyboard* @pokey @AndreasArvidsson @josharian
+*keyboard* @pokey @AndreasArvidsson @phillco @josharian
+*Keyboard* @pokey @AndreasArvidsson @phillco @josharian
