--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,7 +45,10 @@ jobs:
         if: runner.os != 'Linux'
       - name: Cursorless everywhere talon e2e tests
         run: xvfb-run -a pnpm -F @cursorless/test-harness test:talonJs
-        if: runner.os == 'Linux' && matrix.vscode_version == 'stable'
+        if: runner.os == 'Linux'
+      - name: Cursorless everywhere talon e2e tests
+        run: pnpm -F @cursorless/test-harness test:talonJs
+        if: runner.os != 'Linux'
       - name: Cursorless everywhere talon quickjs tests
         run: xvfb-run -a pnpm -F @cursorless/cursorless-everywhere-talon-e2e test:quickjs
         if: runner.os == 'Linux' && matrix.vscode_version == 'stable'
