--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,13 +44,13 @@ jobs:
       - run: pnpm --color test
         if: runner.os != 'Linux'
       - run: xvfb-run -a pnpm -F @cursorless/test-harness test:talonJs
-        if: runner.os == 'Linux'
+        if: runner.os == 'Linux' && matrix.vscode_version == 'stable'
       - run: pnpm -F @cursorless/test-harness test:talonJs
-        if: runner.os != 'Linux'
+        if: runner.os != 'Linux' && matrix.vscode_version == 'stable'
       - run: xvfb-run -a pnpm -F @cursorless/cursorless-everywhere-talon-e2e test:quickjs
-        if: runner.os == 'Linux'
+        if: runner.os == 'Linux' && matrix.vscode_version == 'stable'
       - run: pnpm -F @cursorless/cursorless-everywhere-talon-e2e test:quickjs
-        if: runner.os == 'Windows'
+        if: runner.os == 'Windows' && matrix.vscode_version == 'stable'
       - name: Create vscode dist that can be installed locally
         run: pnpm -F @cursorless/cursorless-vscode populate-dist --local-install
         if: runner.os == 'Linux' && matrix.vscode_version == 'stable'
