--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
       APP_VERSION: ${{ matrix.app_version }}
+      NEOVIM_VERSION: ${{ matrix.app_version == 'stable' && 'stable' || 'v0.10.0' }}
       VSCODE_CRASH_DIR: ${{ github.workspace }}/artifacts/dumps
       VSCODE_LOGS_DIR: ${{ github.workspace }}/artifacts/logs
       CURSORLESS_REPO_ROOT: ${{ github.workspace }}
@@ -46,14 +47,13 @@ jobs:
         if: runner.os != 'Linux'
       - run: bash -x scripts/install-neovim-dependencies.sh
       - uses: rhysd/action-setup-vim@v1
-        if: matrix.app_version != 'legacy'
         id: vim
         with:
-          version: ${{ matrix.app_version }}
+          version: ${{ env.NEOVIM_VERSION }}
           neovim: true
       - name: Run neovim tests
         run: xvfb-run -a pnpm -F @cursorless/test-harness testNeovim
-        if: runner.os == 'Linux' && matrix.app_version == 'stable'
+        if: runner.os == 'Linux'
         env:
           NEOVIM_PATH: ${{ steps.vim.outputs.executable }}
       - name: Create vscode dist that can be installed locally
