Make @saidelike and @fidgetingbits codeowners for neovim

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,3 +2,6 @@
 
 *keyboard* @pokey @AndreasArvidsson @phillco @josharian
 *Keyboard* @pokey @AndreasArvidsson @phillco @josharian
+
+*neovim* @pokey @AndreasArvidsson @saidelike @fidgetingbits
+*Neovim* @pokey @AndreasArvidsson @saidelike @fidgetingbits
