--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -288,7 +288,7 @@
       // so we need to show logs outside of vscode (see #2454)
     },
     {
-      "label": "Neovim: Test Lua",
+      "label": "Neovim: Launch neovim (lua test)",
       "type": "shell",
       "command": "busted --run unit",
       "options": {
