--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,7 @@
-*       @pokey @AndreasArvidsson @phillco
+* @cursorless-dev/code-owners
 
-*keyboard* @pokey @AndreasArvidsson @phillco @josharian
-*Keyboard* @pokey @AndreasArvidsson @phillco @josharian
+*keyboard* @cursorless-dev/code-owners @josharian
+*Keyboard* @cursorless-dev/code-owners @josharian
 
-*neovim* @pokey @AndreasArvidsson @saidelike @fidgetingbits
-*Neovim* @pokey @AndreasArvidsson @saidelike @fidgetingbits
+*neovim* @cursorless-dev/code-owners @saidelike @fidgetingbits
+*Neovim* @cursorless-dev/code-owners @saidelike @fidgetingbits
