--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,3 +5,5 @@
 
 *neovim* @cursorless-dev/code-owners @saidelike @fidgetingbits
 *Neovim* @cursorless-dev/code-owners @saidelike @fidgetingbits
+*nvim* @cursorless-dev/code-owners @saidelike @fidgetingbits
+*Nvim* @cursorless-dev/code-owners @saidelike @fidgetingbits
