Enable logging in quick js test script

--- a/packages/cursorless-everywhere-talon-e2e/package.json
+++ b/packages/cursorless-everywhere-talon-e2e/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "compile": "tsc --build",
-    "test:quickjs": "bash +x scripts/test-quickjs.sh",
+    "test:quickjs": "bash scripts/test-quickjs.sh",
     "clean": "rm -rf ./out tsconfig.tsbuildinfo ./dist ./build"
   },
   "keywords": [],
