Switch logs task to use shell

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -269,7 +269,7 @@
     },
     {
       "label": "Neovim: Show logs",
-      "type": "process",
+      "type": "shell",
       "command": "packages/cursorless-neovim/scripts/show-logs.sh",
       "problemMatcher": [],
       "isBackground": true,
