--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -112,7 +112,7 @@
 
     // Talon launch configs
     {
-      "name": "Talon: Test",
+      "name": "Talon: Test grammar",
       "type": "node",
       "request": "launch",
       "program": "${workspaceFolder}/packages/test-harness/dist/runTalonTests.cjs",
@@ -128,7 +128,7 @@
       ]
     },
     {
-      "name": "Talon: Test (subset)",
+      "name": "Talon: Test grammar (subset)",
       "type": "node",
       "request": "launch",
       "program": "${workspaceFolder}/packages/test-harness/dist/runTalonTests.cjs",
