--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -100,6 +100,7 @@
     "**/vendor/**/*.ts",
     "**/vendor/**/*.js",
     "**/out/**",
-    "**/generated/**"
+    "**/generated/**",
+    "data/playground/**"
   ]
 }
