neovim: Another attempt to fix deploy (#2585)
🤞

## Checklist

- [-] I have added
[tests](https://www.cursorless.org/docs/contributing/test-case-recorder/)
- [-] I have updated the
[docs](https://github.com/cursorless-dev/cursorless/tree/main/docs) and
[cheatsheet](https://github.com/cursorless-dev/cursorless/tree/main/cursorless-talon/src/cheatsheet)
- [-] I have not broken the cheatsheet

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -46,11 +46,9 @@ jobs:
     environment: production
     env:
       CURSORLESS_REPO_ROOT: ${{ github.workspace }}
+      STAGING_DIRECTORY: ${{ github.workspace }}/cursorless.nvim-staging
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          token: ${{ secrets.CURSORLESS_BOT_TOKEN }}
       - run: corepack enable
       - uses: actions/setup-node@v4
         with:
@@ -61,19 +59,26 @@ jobs:
       - run: pnpm --color --filter '!cursorless-org' --filter '!cursorless-org-*' build
         env:
           CURSORLESS_DEPLOY: true
+      - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.CURSORLESS_BOT_TOKEN }}
+          repository: hands-free-vim/cursorless.nvim
+          path: ${{ env.STAGING_DIRECTORY }}
       - name: Configure GPG Key
+        working-directory: ${{ env.STAGING_DIRECTORY }}
         run: |
           echo -n "$GPG_SIGNING_KEY" | base64 --decode | gpg --import
         env:
           GPG_SIGNING_KEY: ${{ secrets.CURSORLESS_BOT_GPG_SIGNING_KEY }}
       - name: git config
+        working-directory: ${{ env.STAGING_DIRECTORY }}
         run: |
-          git config --global user.name cursorless-bot
-          git config --global user.email 98099035+cursorless-bot@users.noreply.github.com
-          git config --global user.signingkey A9387720AFC62221
-          git config --global commit.gpgsign true
+          git config user.name cursorless-bot
+          git config user.email 98099035+cursorless-bot@users.noreply.github.com
+          git config user.signingkey A9387720AFC62221
+          git config commit.gpgsign true
       - name: Push compiled files to cursorless.nvim plugin repo
-        run: bash -x scripts/deploy-cursorless-nvim.sh
+        run: bash -x scripts/deploy-cursorless-nvim.sh ${{ env.STAGING_DIRECTORY }}
 
   push-cursorless-talon:
     name: Push cursorless-talon subrepo
