Rename meta script to profile

--- a/packages/cursorless-everywhere-talon/package.json
+++ b/packages/cursorless-everywhere-talon/package.json
@@ -10,7 +10,7 @@
     "esbuild:dev": "pnpm run esbuild:base src/mainDevelopment.ts",
     "esbuild:prod": "pnpm run esbuild:base --minify src/mainProduction.ts",
     "esbuild:watch": "pnpm run esbuild:base --watch src/mainDevelopment.ts",
-    "esbuild:meta": "pnpm run esbuild:base --metafile=meta.json src/mainDevelopment.ts",
+    "esbuild:profile": "pnpm run esbuild:base --metafile=meta.json src/mainDevelopment.ts",
     "esbuild:base": "bash scripts/esbuild.sh",
     "compile": "tsc --build",
     "compile:esbuild": "pnpm run esbuild:prod",
