Cursorless everywhere in Talon (#2503)
## Oddities and todos
- [ ] Talon requires a javascript file to have a Talon(or another
package?) import before any other code. Right now I do that in my
[`esbuild.sh`](https://github.com/cursorless-dev/cursorless/blob/100f7706553fd24ce3ccbec2d1ec30c20e7f0a3f/packages/cursorless-talon-js/esbuild.sh#L20-L22)
script. This does not support esbuild watch.
    - The solution here is for Talon to support mjs file endings
- [x] Restore num selections check for windows:
[`cursorless_everywhere_talon_win.py`](https://github.com/cursorless-dev/cursorless/blob/824735f58e58ea3ca5bfb2448df801a4e7f28b1c/cursorless-everywhere-talon/cursorless_everywhere_talon_win.py#L49-L50)
once Talon converts from js to py correctly
- [x] Is there any point in outputting source maps to Talon?
- [x] If easy, let's run in CI on all platforms



## Information
* https://bellard.org/quickjs/

## Checklist

- [x] I have added
[tests](https://www.cursorless.org/docs/contributing/test-case-recorder/)
- [/] I have updated the
[docs](https://github.com/cursorless-dev/cursorless/tree/main/docs) and
[cheatsheet](https://github.com/cursorless-dev/cursorless/tree/main/cursorless-talon/src/cheatsheet)
- [/] I have not broken the cheatsheet

---------

Co-authored-by: pre-commit-ci-lite[bot] <117423508+pre-commit-ci-lite[bot]@users.noreply.github.com>
Co-authored-by: Pokey Rule <755842+pokey@users.noreply.github.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -130,7 +130,7 @@
 
     // Talon launch configs
     {
-      "name": "Talon: Test",
+      "name": "Talon: Test grammar",
       "type": "node",
       "request": "launch",
       "program": "${workspaceFolder}/packages/test-harness/dist/runTalonTests.cjs",
@@ -146,10 +146,45 @@
       ]
     },
     {
-      "name": "Talon: Test (subset)",
+      "name": "Talon: Test grammar (subset)",
       "type": "node",
       "request": "launch",
       "program": "${workspaceFolder}/packages/test-harness/dist/runTalonTests.cjs",
+      "env": {
+        "CURSORLESS_MODE": "test",
+        "CURSORLESS_RUN_TEST_SUBSET": "true",
+        "CURSORLESS_REPO_ROOT": "${workspaceFolder}"
+      },
+      "outFiles": ["${workspaceFolder}/**/out/**/*.js"],
+      "preLaunchTask": "VSCode: Build extension and tests",
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/**",
+        "!**/node_modules/**"
+      ]
+    },
+
+    // Talon everywhere/JS launch configs
+    {
+      "name": "TalonJS: Test",
+      "type": "node",
+      "request": "launch",
+      "program": "${workspaceFolder}/packages/test-harness/dist/runTalonJsTests.cjs",
+      "env": {
+        "CURSORLESS_MODE": "test",
+        "CURSORLESS_REPO_ROOT": "${workspaceFolder}"
+      },
+      "outFiles": ["${workspaceFolder}/**/out/**/*.js"],
+      "preLaunchTask": "VSCode: Build extension and tests",
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/**",
+        "!**/node_modules/**"
+      ]
+    },
+    {
+      "name": "TalonJS: Test (subset)",
+      "type": "node",
+      "request": "launch",
+      "program": "${workspaceFolder}/packages/test-harness/dist/runTalonJsTests.cjs",
       "env": {
         "CURSORLESS_MODE": "test",
         "CURSORLESS_RUN_TEST_SUBSET": "true",
