--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,15 @@
       "path": "./packages/cursorless-engine"
     },
     {
+      "path": "./packages/cursorless-everywhere-talon"
+    },
+    {
+      "path": "./packages/cursorless-everywhere-talon-core"
+    },
+    {
+      "path": "./packages/cursorless-everywhere-talon-e2e"
+    },
+    {
       "path": "./packages/cursorless-neovim"
     },
     {
