--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 out
 dist
+testOut
 node_modules
 .vscode-test/
 *.vsix
 /package-lock.json
 *.DS_Store
+meta.json
 .luacheckcache
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
