feat: Add lua-language-server to pre-commit hooks
- Implement lua-language-server linter in pre-commit
- Install via Nix due to lack of Ubuntu package
- Apply patch for --check CLI bug using Nix overlay
- Centralize linting config for VSCode, pre-commit, and CI

Fixes #2576

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -91,3 +91,11 @@ repos:
     hooks:
       - id: stylua
         exclude: ^data/playground/lua/.*\.lua$
+  - repo: local
+    hooks:
+      - id: lua-language-server
+        name: lua-language-server
+        files: \.(lua|busted)$
+        entry: scripts/lint-lua.sh
+        language: script
+        pass_filenames: false
