--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -8,11 +8,14 @@ on:
     types: [opened, synchronize, reopened]
   merge_group:
     branches: [main]
+  workflow_dispatch:
 
 jobs:
   pre-commit:
     name: Pre-commit
     runs-on: ubuntu-latest
+    env:
+      CURSORLESS_REPO_ROOT: ${{ github.workspace }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -26,6 +29,12 @@ jobs:
       - run: pnpm --color install
       - uses: leafo/gh-actions-lua@v9
       - uses: leafo/gh-actions-luarocks@v4
+      - uses: cachix/install-nix-action@v27
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
+      - uses: DeterminateSystems/magic-nix-cache-action@v2
+      - run: nix profile install --accept-flake-config .#lua-language-server
+        shell: bash
       - uses: pre-commit/action@v3.0.1
       - uses: pre-commit-ci/lite-action@v1.0.2
         if: always()
