--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -95,7 +95,7 @@
         "jest.config.ts",
         "docusaurus.config.mts",
         "mdx-components.tsx",
-        "/typings/**"
+        "typings/**"
       ],
       "extends": ["plugin:@typescript-eslint/disable-type-checked"]
     }
