--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,6 +66,8 @@ jobs:
           NEOVIM_PATH: ${{ steps.vim.outputs.executable }}
       - uses: ./.github/actions/test-neovim-lua/
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
+      - uses: ./.github/actions/lint-lua-ls/
+        if: runner.os == 'Linux' && matrix.app_version == 'stable'
       - name: Create vscode dist that can be installed locally
         run: pnpm -F @cursorless/cursorless-vscode populate-dist --local-install
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
