--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -8,11 +8,14 @@ on:
     types: [opened, synchronize, reopened]
   merge_group:
     branches: [main]
+  workflow_dispatch:
 
 jobs:
   pre-commit:
     name: Pre-commit
     runs-on: ubuntu-latest
+    env:
+      CURSORLESS_REPO_ROOT: ${{ github.workspace }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
