No default spoken form

--- a/data/fixtures/recorded/modifiers/preferredScope/changeGoodPair2.yml
+++ b/data/fixtures/recorded/modifiers/preferredScope/changeGoodPair2.yml
@@ -10,6 +10,7 @@ command:
         - type: preferredScope
           scopeType: {type: surroundingPair, delimiter: any}
   usePrePhraseSnapshot: true
+spokenFormError: Modifier 'preferredScope'
 initialState:
   documentContents: |-
     ()      ()
