--- a/data/fixtures/recorded/modifiers/preferredScope/clearLiteralHello2.yml
+++ b/data/fixtures/recorded/modifiers/preferredScope/clearLiteralHello2.yml
@@ -10,9 +10,7 @@ command:
         - type: preferredScope
           scopeType: {type: customRegex, regex: hello, flags: gui}
   usePrePhraseSnapshot: true
-spokenFormError: >-
-  custom regex with id hello; please see
-  https://www.cursorless.org/docs/user/customization/ for more information
+spokenFormError: Modifier 'preferredScope'
 initialState:
   documentContents: |-
 
