Try to fix luajit ci test

--- a/.github/actions/test-neovim-lua/action.yml
+++ b/.github/actions/test-neovim-lua/action.yml
@@ -5,7 +5,7 @@ runs:
   steps:
     - uses: leafo/gh-actions-lua@v9
       with:
-        luaVersion: "luajit-2.1.0-beta3"
+        luaVersion: "luajit-openresty-2.1.0-beta3"
     - uses: leafo/gh-actions-luarocks@v4
     - shell: bash
       run: |
