--- a/.github/actions/test-neovim-lua/action.yml
+++ b/.github/actions/test-neovim-lua/action.yml
@@ -3,9 +3,9 @@ description: "Set up Neovim Lua environment and run Busted tests"
 runs:
   using: "composite"
   steps:
-    - uses: leafo/gh-actions-lua@v9
+    - uses: leafo/gh-actions-lua@v10
       with:
-        luaVersion: "luajit-openresty-2.1.0-beta3"
+        luaVersion: "luajit-openresty"
     - uses: leafo/gh-actions-luarocks@v4
     - shell: bash
       run: |
