--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,6 +51,7 @@
       {
         "argsIgnorePattern": "^_",
         "varsIgnorePattern": "^_",
+        "caughtErrorsIgnorePattern": "^_",
         "ignoreRestSiblings": true
       }
     ],
