--- a/packages/cheatsheet-local/package.json
+++ b/packages/cheatsheet-local/package.json
@@ -25,32 +25,33 @@
   },
   "dependencies": {
     "@cursorless/cheatsheet": "workspace:*",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@effortlessmotion/html-webpack-inline-source-plugin": "1.0.3",
-    "@testing-library/react": "14.2.2",
-    "@types/jest": "29.5.12",
-    "@types/node": "18.18.2",
-    "@types/react": "18.2.71",
-    "@types/react-dom": "18.2.22",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/react": "16.0.1",
+    "@types/jest": "29.5.13",
+    "@types/node": "22.7.5",
+    "@types/react": "18.3.11",
+    "@types/react-dom": "18.3.1",
     "@types/webpack": "5.28.5",
     "@webpack-cli/generators": "3.0.7",
-    "autoprefixer": "10.4.19",
-    "css-loader": "6.10.0",
+    "autoprefixer": "10.4.20",
+    "css-loader": "7.1.2",
     "html-webpack-plugin": "5.6.0",
     "jest": "29.7.0",
-    "postcss": "8.4.38",
+    "postcss": "8.4.47",
     "postcss-loader": "8.1.1",
-    "style-loader": "3.3.4",
-    "tailwindcss": "3.4.1",
+    "style-loader": "4.0.0",
+    "tailwindcss": "3.4.14",
     "ts-loader": "9.5.1",
     "ts-node": "10.9.2",
-    "typescript": "^5.5.3",
+    "typescript": "^5.6.3",
     "webpack": "5.95.0",
     "webpack-cli": "5.1.4",
-    "webpack-dev-server": "5.0.4"
+    "webpack-dev-server": "5.1.0"
   },
   "postcss": {
     "plugins": {
