--- a/packages/cheatsheet/package.json
+++ b/packages/cheatsheet/package.json
@@ -27,24 +27,25 @@
     "*.css"
   ],
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "6.5.1",
-    "@fortawesome/free-solid-svg-icons": "6.5.1",
-    "@fortawesome/react-fontawesome": "0.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@fortawesome/fontawesome-svg-core": "6.6.0",
+    "@fortawesome/free-solid-svg-icons": "6.6.0",
+    "@fortawesome/react-fontawesome": "0.2.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-string-replace": "1.1.1",
-    "react-use": "17.5.0"
+    "react-use": "17.5.1"
   },
   "devDependencies": {
-    "@testing-library/react": "14.2.2",
-    "@types/jest": "29.5.12",
-    "@types/react": "18.2.71",
-    "@types/react-dom": "18.2.22",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/react": "16.0.1",
+    "@types/jest": "29.5.13",
+    "@types/react": "18.3.11",
+    "@types/react-dom": "18.3.1",
     "@types/react-helmet": "6.1.11",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "ts-jest": "29.1.2",
-    "typescript": "^5.5.3"
+    "ts-jest": "29.2.5",
+    "typescript": "^5.6.3"
   },
   "type": "module"
 }
