--- a/packages/cursorless-jetbrains/package.json
+++ b/packages/cursorless-jetbrains/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@cursorless/cursorless-neovim",
+  "name": "@cursorless/cursorless-jetbrains",
   "version": "1.0.0",
-  "description": "cursorless in neovim",
-  "main": "./out/index.cjs",
+  "description": "cursorless in jetbrains",
+  "main": "./out/cursorless.js",
   "private": true,
   "scripts": {
     "build": "pnpm run esbuild:prod && pnpm run populate-dist",
@@ -14,7 +14,7 @@
     "populate-dist:prod": "bash ./scripts/populate-dist.sh",
     "watch:tsc": "pnpm compile --watch",
     "watch:esbuild": "pnpm esbuild --watch",
-    "watch": "pnpm run --filter @cursorless/cursorless-neovim --parallel '/^watch:.*/'",
+    "watch": "pnpm run --filter @cursorless/cursorless-jetbrains --parallel '/^watch:.*/'",
     "clean": "rm -rf ./out tsconfig.tsbuildinfo ./dist ./build"
   },
   "keywords": [],
@@ -30,9 +30,6 @@
   "dependencies": {
     "@cursorless/common": "workspace:*",
     "@cursorless/cursorless-engine": "workspace:*",
-    "@cursorless/neovim-common": "workspace:*",
-    "@cursorless/neovim-registry": "workspace:*",
-    "@cursorless/node-common": "workspace:*",
     "@cursorless/test-case-recorder": "workspace:*"
   },
   "devDependencies": {
@@ -40,8 +37,6 @@
     "@types/js-yaml": "^4.0.9",
     "@types/lodash": "4.17.10",
     "@types/uuid": "^10.0.0",
-    "lodash": "^4.17.21",
-    "neovim": "5.3.0",
-    "vscode-uri": "^3.0.8"
+    "lodash": "^4.17.21"
   }
 }
