--- a/packages/cursorless-jetbrains/tsconfig.json
+++ b/packages/cursorless-jetbrains/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "target": "ES2020",
     "rootDir": "src",
     "outDir": "out"
   },
