add jetbrains treesitter support

--- a/packages/cursorless-jetbrains/tsconfig.json
+++ b/packages/cursorless-jetbrains/tsconfig.json
@@ -25,5 +25,5 @@
       "path": "../test-case-recorder"
     }
   ],
-  "include": ["src/**/*.ts", "src/**/*.json", "../../typings/**/*.d.ts"]
+  "include": ["src/**/*.ts", "src/**/*.json", "../../typings/**/object.d.ts"]
 }
