--- a/packages/cursorless-jetbrains/package.json
+++ b/packages/cursorless-jetbrains/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "pnpm run esbuild:prod && pnpm run populate-dist",
     "compile": "tsc --build",
-    "esbuild:base": "esbuild ./src/index.ts --format=esm --target=es2020 --conditions=cursorless:bundler --bundle --main-fields=main,module --outfile=./out/cursorless.js --platform=neutral --external:std",
+    "esbuild:base": "esbuild ./src/index.ts --format=esm --target=es2020 --conditions=cursorless:bundler --bundle --main-fields=main,module --outfile=./out/cursorless.js --platform=neutral --external:std --external:fs --external:path",
     "esbuild": "pnpm run esbuild:base --sourcemap",
     "esbuild:prod": "pnpm run esbuild:base --minify",
     "populate-dist": "bash ./scripts/populate-dist.sh",
@@ -31,7 +31,8 @@
     "@cursorless/common": "workspace:*",
     "@cursorless/cursorless-engine": "workspace:*",
     "@cursorless/test-case-recorder": "workspace:*",
-    "vscode-uri": "^3.0.8"
+    "vscode-uri": "^3.0.8",
+    "web-tree-sitter": "0.24.4"
   },
   "devDependencies": {
     "@types/chai": "^5.0.0",
