--- a/packages/cursorless-jetbrains/package.json
+++ b/packages/cursorless-jetbrains/package.json
@@ -4,6 +4,7 @@
   "description": "cursorless in jetbrains",
   "main": "./out/cursorless.js",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "pnpm run esbuild:prod && pnpm run populate-dist",
     "compile": "tsc --build",
@@ -35,10 +36,6 @@
     "web-tree-sitter": "0.24.4"
   },
   "devDependencies": {
-    "@types/chai": "^5.0.0",
-    "@types/js-yaml": "^4.0.9",
-    "@types/lodash": "4.17.10",
-    "@types/uuid": "^10.0.0",
-    "lodash": "^4.17.21"
+    "@types/chai": "^5.0.0"
   }
 }
