fix more linting issues, and missing lodash dependency

--- a/packages/cursorless-jetbrains/package.json
+++ b/packages/cursorless-jetbrains/package.json
@@ -32,10 +32,12 @@
     "@cursorless/common": "workspace:*",
     "@cursorless/cursorless-engine": "workspace:*",
     "@cursorless/test-case-recorder": "workspace:*",
+    "lodash-es": "^4.17.21",
     "vscode-uri": "^3.0.8",
     "web-tree-sitter": "0.24.4"
   },
   "devDependencies": {
-    "@types/chai": "^5.0.0"
+    "@types/chai": "^5.0.0",
+    "@types/lodash-es": "4.17.12"
   }
 }
