--- a/data/fixtures/recorded/surroundingPair/textual/changePair2.yml
+++ b/data/fixtures/recorded/surroundingPair/textual/changePair2.yml
@@ -11,7 +11,7 @@ command:
           scopeType: {type: surroundingPair, delimiter: any}
   usePrePhraseSnapshot: true
 initialState:
-  documentContents: "[1, \"]\", 2]"
+  documentContents: "[1, ']', 2]"
   selections:
     - anchor: {line: 0, character: 1}
       active: {line: 0, character: 1}
