--- a/data/fixtures/recorded/surroundingPair/textual/changePair3.yml
+++ b/data/fixtures/recorded/surroundingPair/textual/changePair3.yml
@@ -11,7 +11,7 @@ command:
           scopeType: {type: surroundingPair, delimiter: any}
   usePrePhraseSnapshot: true
 initialState:
-  documentContents: "`[1, ${\"]\"}, 3]`"
+  documentContents: "`[1, ${']'}, 3]`"
   selections:
     - anchor: {line: 0, character: 1}
       active: {line: 0, character: 1}
