--- a/data/fixtures/recorded/actions/addWhale.yml
+++ b/data/fixtures/recorded/actions/addWhale.yml
@@ -1,9 +1,9 @@
 languageId: plaintext
 command:
   version: 7
-  spokenForm: append whale
+  spokenForm: add whale
   action:
-    name: appendSelection
+    name: addSelection
     target:
       type: primitive
       mark: {type: decoratedSymbol, symbolColor: default, character: w}
