Update name to directory

--- a/data/fixtures/recorded/actions/snippets/snipMakeFunk2.yml
+++ b/data/fixtures/recorded/actions/snippets/snipMakeFunk2.yml
@@ -4,7 +4,7 @@ command:
   spokenForm: snippet make funk
   action:
     name: generateSnippet
-    dirPath: ""
+    directory: ""
     snippetName: snippetTest1
     target:
       type: primitive
