--- a/data/fixtures/recorded/actions/snippets/snipMakeState2.yml
+++ b/data/fixtures/recorded/actions/snippets/snipMakeState2.yml
@@ -4,7 +4,7 @@ command:
   spokenForm: snippet make state
   action:
     name: generateSnippet
-    dirPath: ""
+    directory: ""
     snippetName: snippetTest1
     target:
       type: primitive
