--- a/packages/cursorless-vscode/package.json
+++ b/packages/cursorless-vscode/package.json
@@ -238,6 +238,11 @@
         "command": "cursorless.keyboard.redoTarget",
         "title": "Cursorless: Redo keyboard targeting changes",
         "enablement": "false"
+      },
+      {
+        "command": "cursorless.migrateSnippets",
+        "title": "Cursorless: Migrate snippets from the old Cursorless format to the new community format",
+        "enablement": "false"
       }
     ],
     "colors": [
