--- a/packages/cursorless-vscode/package.json
+++ b/packages/cursorless-vscode/package.json
@@ -238,6 +238,11 @@
         "command": "cursorless.keyboard.redoTarget",
         "title": "Cursorless: Redo keyboard targeting changes",
         "enablement": "false"
+      },
+      {
+        "command": "cursorless.migrateSnippets",
+        "title": "Cursorless: Migrate snippets from the old Cursorless format to the new community format",
+        "enablement": "false"
       }
     ],
     "colors": [
@@ -1284,6 +1289,7 @@
     "lodash-es": "^4.17.21",
     "nearley": "2.20.1",
     "semver": "^7.6.3",
+    "talon-snippets": "1.3.0",
     "tinycolor2": "1.6.0",
     "trie-search": "2.0.0",
     "uuid": "^10.0.0",
