--- a/data/fixtures/recorded/modifiers/interior/changeInsideToken.yml
+++ b/data/fixtures/recorded/modifiers/interior/changeInsideToken.yml
@@ -17,4 +17,8 @@ initialState:
     - anchor: {line: 0, character: 3}
       active: {line: 0, character: 3}
   marks: {}
-thrownError: {name: NoContainingScopeError}
+finalState:
+  documentContents: ()
+  selections:
+    - anchor: {line: 0, character: 1}
+      active: {line: 0, character: 1}
