--- a/data/fixtures/recorded/implicitExpansion/clearCoreToken.yml
+++ b/data/fixtures/recorded/implicitExpansion/clearCoreToken.yml
@@ -17,8 +17,4 @@ initialState:
     - anchor: {line: 0, character: 1}
       active: {line: 0, character: 1}
   marks: {}
-finalState:
-  documentContents: ()
-  selections:
-    - anchor: {line: 0, character: 1}
-      active: {line: 0, character: 1}
+thrownError: {name: NoContainingScopeError}
