--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,13 +49,13 @@ jobs:
       - run: pnpm --color test
         if: runner.os != 'Linux'
       - run: xvfb-run -a pnpm -F @cursorless/test-harness test:talonJs
-        if: runner.os == 'Linux' && matrix.vscode_version == 'stable'
+        if: runner.os == 'Linux' && matrix.app_version == 'stable'
       - run: pnpm -F @cursorless/test-harness test:talonJs
-        if: runner.os != 'Linux' && matrix.vscode_version == 'stable'
+        if: runner.os != 'Linux' && matrix.app_version == 'stable'
       - run: xvfb-run -a pnpm -F @cursorless/cursorless-everywhere-talon-e2e test:quickjs
-        if: runner.os == 'Linux' && matrix.vscode_version == 'stable'
+        if: runner.os == 'Linux' && matrix.app_version == 'stable'
       - run: pnpm -F @cursorless/cursorless-everywhere-talon-e2e test:quickjs
-        if: runner.os != 'Linux' && matrix.vscode_version == 'stable'
+        if: runner.os != 'Linux' && matrix.app_version == 'stable'
       - run: bash -x scripts/install-neovim-dependencies.sh
       - uses: rhysd/action-setup-vim@v1
         id: vim
