--- a/data/fixtures/recorded/fallback/takeThis.yml
+++ b/data/fixtures/recorded/fallback/takeThis.yml
@@ -22,5 +22,4 @@ finalState:
       active: {line: 0, character: 0}
 fallback:
   action: setSelection
-  modifiers:
-    - {type: containingTokenIfEmpty}
+  modifiers: []
