--- a/data/fixtures/recorded/actions/snippets/snipFunkAfterThis5.yml
+++ b/data/fixtures/recorded/actions/snippets/snipFunkAfterThis5.yml
@@ -12,6 +12,7 @@ command:
         type: primitive
         mark: {type: cursor}
   usePrePhraseSnapshot: true
+spokenFormError: named insertion snippet
 initialState:
   documentContents: |-
     class Aaa {
@@ -23,24 +24,4 @@ initialState:
     - anchor: {line: 2, character: 8}
       active: {line: 2, character: 8}
   marks: {}
-finalState:
-  documentContents: |-
-    class Aaa {
-        bbb() {
-            
-        }
-
-        () {
-            
-        }
-    }
-  selections:
-    - anchor: {line: 5, character: 4}
-      active: {line: 5, character: 4}
-  thatMark:
-    - type: UntypedTarget
-      contentRange:
-        start: {line: 5, character: 4}
-        end: {line: 7, character: 5}
-      isReversed: false
-      hasExplicitRange: true
+thrownError: {name: Error}
